k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: chatlink.dev
      http:
        paths:
          - pathType: Prefix
            path: "/elastic"
            backend:
              service:
                name: elastic
                port:
                  number: 9200
          - pathType: Prefix
            path: "/kibana"
            backend:
              service:
                name: kibana
                port:
                  number: 5601
          - pathType: Prefix
            path: "/api/auth/?(.*)"
            backend:
              service:
                name: auth-srv
                port:
                  number: 3002
